# mensabot

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
mensabot/: __main__.py  parser.py
tests/: test_read_html_menus.py
tests/data/: menu_default.html  menu_format_matcard.html  menu_holiday.html  menu_with_co2.html
